# modbus-pp

./: CMakeLists.txt  build.sh
doc/: modbus_pp_block_diagram.drawio
inc/: builder.hpp  client.hpp  commands.hpp  defs.hpp  error.hpp  logic.hpp  message.hpp  modbus.hpp  node.hpp  observer.hpp  result.hpp  spec.hpp  storage.hpp  strategies.hpp  unit.hpp  universal_unit.hpp
src/: ascii_strategy.cpp  client.cpp  cmd_deser.cpp  logic.cpp  node.cpp  node_base.cpp  result_deser.cpp  rtu_strategy.cpp  tcp_strategy.cpp  unit.cpp  universal_unit.cpp
src/commands/: get _comm_event_counter.cpp  get _comm_event_log.cpp  mask_write_register.cpp  read_coil.cpp  read_discrete_inputs.cpp  read_exception_status.cpp  read_holding_registers.cpp  read_input_registers.cpp  read_write_multiple_registers.cpp  report_slave_id.cpp  write_multiple_coils.cpp  write_multiple_registers.cpp  write_single_coil.cpp  write_single_register.cpp
src/msg/: error_pdu.cpp  get _comm_event_counter.cpp  get _comm_event_log.cpp  mask_write_register.cpp  read_coil.cpp  read_discrete_inputs.cpp  read_exception_status.cpp  read_holding_registers.cpp  read_input_registers.cpp  read_write_multiple_registers.cpp  report_slave_id.cpp  write_multiple_coils.cpp  write_multiple_registers.cpp  write_single_coil.cpp  write_single_register.cpp
test/: main.cpp
